tipe partnert dan API wallet new
